# PanoRenderer

./: .clang-format  .gitignore  AppState.hpp  CMakeLists.txt  GUI.hpp  Image.hpp  IndexBuffer.hpp  PanoContainer.hpp  Pose.hpp  Shader.hpp  Sphere.cpp  Sphere.hpp  VertexBuffer.hpp  VideoReader.hpp  Window.hpp  clang-format.sh  config.h  cube.h  egl.cpp  ffd.c  ffmepg.cpp  main.cpp  notes.txt  shader.h  shader_tools.h  utils.cmake  utils.h  utils.hpp  vcodec_test.cpp
cmake/: utils.cmake
cnpy/: CMakeLists.txt  cnpy.h
glew-2.2.0/: glew.pc
glew-2.2.0/lib/: libGLEW.so.2.2.0
imgui/: CMakeLists.txt
shaders/: frag.glsl  vertex.glsl
stb_image/: CMakeLists.txt
trajectories/: 000.npy  001.npy  002.npy  003.npy  004.npy  005.npy  006.npy  007.npy  008.npy  009.npy  010.npy  011.npy  012.npy  013.npy  014.npy  015.npy  016.npy  017.npy  018.npy  019.npy  020.npy  021.npy  022.npy  023.npy  024.npy  025.npy  026.npy  027.npy  028.npy  029.npy  cf-nr.npy  cf.npy
